--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,11 @@ services:
       - GRANT_SUDO=yes
     command: "start-notebook.sh \
             --NotebookApp.password='sha1:198af844a6f0:9a6eb754d045f2d0894172645c6b9bc97794777f'"
-
+  producer:
+    image: flightsproducer
+    depends_on:
+      - kafka
+      - zookeeper
   zookeeper:
     image: wurstmeister/zookeeper:3.4.6
     ports:
@@ -22,6 +26,7 @@ services:
      - "9092:9092"
     expose:
      - "9093"
+     - "9092"
     environment:
       KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
