--- a/python_producer_image/docker-compose.yaml
+++ b/python_producer_image/docker-compose.yaml
@@ -1,28 +1,13 @@
 version: '2'
 services:
-  dsnb:
-    image: jupyter/datascience-notebook
-    volumes:
-      -  ./:/home/jovyan/
-    ports:
-      - 8888:8888
-    environment:
-      - PASSWORD=lilletrille
-      - GRANT_SUDO=yes
-    command: "start-notebook.sh \
-            --NotebookApp.password='sha1:198af844a6f0:9a6eb754d045f2d0894172645c6b9bc97794777f'"
   producer:
-    image: flightsproducer
+    image: flightproducer
     depends_on:
       - kafka
-      - zookeeper
   consumer:
     image: flightsconsumer
     depends_on:
       - kafka
-      - zookeeper
-    ports:
-      - "5000:5000"
   zookeeper:
     image: wurstmeister/zookeeper:3.4.6
     ports:
@@ -33,7 +18,6 @@ services:
      - "9092:9092"
     expose:
      - "9093"
-     - "9092"
     environment:
       KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
